--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -21,7 +21,7 @@ body {
 }
 
 .hero-section {
-  background-image: url("/assets/images/img_login.png");
+  background-image: url("../images/img_login.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
