--- a/laravel-urbanestate/public/css/style.css
+++ b/laravel-urbanestate/public/css/style.css
@@ -3,16 +3,16 @@
 	padding: 0;
 	box-sizing: border-box;
   }
-  
+
   .container {
 	width: 80%;
 	margin: 0 auto;
   }
-  
+
   body {
 	font-family: "Poppins", sans-serif;
   }
-  
+
   /* new nav */
   nav {
 	display: flex;
@@ -39,7 +39,7 @@
   }
   nav ul li a.active,
   nav ul li a:hover {
-	color: #ffb72b;
+	color: #d7984e;
   }
   nav .menu-btn i {
 	color: #000;
@@ -50,9 +50,9 @@
   input[type="checkbox"] {
 	display: none;
   }
-  
+
   .btn_login {
-	background-color: #ffb72b;
+	background-color: #d7984e;
 	width: 100%;
 	padding: 8px 16px;
 	border-radius: 10px;
@@ -60,89 +60,89 @@
 	cursor: pointer;
 	color: white;
   }
-  
+
   .btn_login:hover {
-	background-color: #eba416;
+	background-color: #7e6531;
 	color: #fff;
   }
-  
+
   /* style jumbotron */
   .jumbotron {
 	display: flex;
-	background-color: #ffb72b;
+	background-color: #d7984e;
 	border-radius: 20px;
 	padding: 20px 0;
 	justify-content: space-around;
 	align-items: center;
 	margin-bottom: 50px;
   }
-  
+
   .jumbotron-text {
 	width: 30%;
 	font-weight: 500;
   }
-  
+
   .jumbotron-text p {
 	color: white;
 	margin: 20px 0;
   }
-  
+
   .jumbotron-text button {
 	padding: 10px 18px;
 	border: none;
 	border-radius: 10px;
 	background-color: white;
-	color: #ffb72b;
+	color: #d7984e;
 	cursor: pointer;
   }
-  
+
   /* style card-categories */
   .cards-categories {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
   }
-  
+
   .cards-categories h2 {
 	font-family: "Roboto", sans-serif;
 	font-size: 24px;
 	margin-bottom: 20px;
 	text-align: center;
   }
-  
+
   .card-categories {
 	display: grid;
 	gap: 1.5rem;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
-  
+
   .card {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 	border-radius: 15px;
 	overflow: hidden;
 	transition: transform 0.3s ease-in-out;
   }
-  
+
   .card:hover {
 	transform: scale(1.05);
   }
-  
+
   .card .card-image {
 	overflow: hidden;
 	border-radius: 15px 15px 0 0;
   }
-  
+
   .card img {
 	width: 100%;
 	height: auto;
 	object-fit: cover;
 	border-radius: 15px 15px 0 0;
   }
-  
+
   .card-content {
 	padding: 20px;
   }
-  
+
   .card h5 {
 	margin-bottom: 10px;
 	font-family: "Roboto", sans-serif;
@@ -150,22 +150,22 @@
 	font-weight: 600;
 	color: #333;
   }
-  
+
   .card p.description {
 	font-size: 14px;
 	color: #666;
 	margin-bottom: 15px;
   }
-  
+
   .card p.price {
 	font-size: 18px;
 	font-weight: bold;
-	color: #ffb72b;
+	color: #d7984e;
 	margin-bottom: 15px;
   }
-  
+
   .card .btn_belanja {
-	background-color: #ffb72b;
+	background-color: #d7984e;
 	padding: 12px 20px;
 	border-radius: 8px;
 	border: none;
@@ -174,15 +174,15 @@
 	font-size: 16px;
 	transition: background-color 0.3s ease;
   }
-  
+
   .card .btn_belanja:hover {
-	background-color: #eba416;
+	background-color: #7e6531;
   }
-  
-  
-  
-  
-  
+
+ .grid-3 { display: grid; grid-template-columns: repeat(3, minmax(20rem, 1fr)); gap: 28px; }
+
+
+
   /* footer */
   footer {
 	display: flex;
@@ -190,16 +190,16 @@
 	align-items: center;
 	margin: 40px 0;
   }
-  
+
   /* style page login */
-  
+
   .center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 500px;
   }
-  
+
   .form-login {
 	display: flex;
 	flex-direction: column;
@@ -211,7 +211,7 @@
 	box-shadow: 0 6px 12px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
   }
-  
+
   .input {
 	width: 100%;
 	margin: 10px 0;
@@ -219,7 +219,7 @@
 	border-radius: 10px;
 	border: 1px solid rgb(148, 148, 148);
   }
-  
+
   .link-register {
 	text-decoration: none;
 	margin-top: 10px;
@@ -240,7 +240,7 @@
 }
 
 .modal-dialog {
-    width: 80%; 
+    width: 80%;
     max-width: 500px;
     background-color: #fff;
     border: none;
@@ -304,7 +304,7 @@
 	border-radius: 5px;
 	cursor: pointer;
 	color: #fff;
-	
+
 }
 
 .btn-secondary {
@@ -313,15 +313,15 @@
 }
 
 .btn-yellow {
-	background-color: #ffb72b;
+	background-color: #d7984e;
 }
 
 
-  
+
   /* responsive */
   @media screen and (max-width: 1023px) {
 	.modal-dialog {
-        width: 80%; 
+        width: 80%;
 	}
 	.container {
 	  width: 100%;
@@ -332,7 +332,7 @@
 	  padding: 0 40px 0 50px;
 	  position: relative;
 	}
-  
+
 	nav .menu-btn i {
 	  display: block;
 	}
@@ -369,9 +369,9 @@
 	}
 	nav ul li a.active,
 	nav ul li a:hover {
-	  color: #ffb72b;
+	  color: #d7984e;
 	}
-  
+
 	/* jumbotron responsive */
 	.jumbotron {
 	  flex-direction: column-reverse;
@@ -381,26 +381,25 @@
 	.jumbotron-img img {
 	  width: 100% !important;
 	}
-  
+
 	.jumbotron-text {
 	  width: 100% !important;
 	  padding-left: 20px;
 	}
-  
+
 	/* card-categories responsive */
 	.card-categories {
 	  flex-direction: column;
 	  gap: 20px;
 	  margin: 0 10px;
 	}
-  
+
 	.card {
 	  width: 100% !important;
 	}
-  
+
 	/* form-login responsive */
 	.form-login {
 	  width: 80%;
 	}
   }
-  
